2 files modified, 1 deleted

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap-vue": "^2.16.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "vue": "^2.6.11"
+    "bootstrap-vue": "2.16.0",
+    "jquery": "3.5.1",
+    "popper.js": "1.16.1",
+    "spa-central-styles-free": "^1.0.5",
+    "vue": "2.6.11"
   }
 }
